# ICC-2018-2

Lista 1/: Lista 1 - Gabarito.docx  Lista 1 - Gabarito.odt  Lista 1.tex
Lista 1/Lista 1 - Gabaritos/: Lista 1 - Questão 1.py  Lista 1 - Questão 2.py  Lista 1 - Questão 3.py  Lista 1 - Questão 4.py  Lista 1 - Questão 5.py  Lista 1 - Questão 6.py  Lista 1 - Questão 7.py  Lista 1 - Questão B.py  Lista 1 - Questão C.py  Lista 1 - Questão D.py  Lista 1 - Questão F.py  Lista 1 - Questão G.py
Lista 2/: Lista 2 - Gabarito.docx  Lista 2.tex  Lista de Exercícios 2 - Gabarito.docx  Lista de Exercícios 2.docx
Lista 2/Lista 2 - Gabaritos/: Lista 2 - Questão A.py  Lista 2 - Questão B.py  Lista 2 - Questão C.py  Lista 2 - Questão D.py  Lista 2 - Questão E.py  Lista 2 - Questão F.py  Lista 2 - Questão G.py
Lista 2/Lista de Exercícios 2 - Gabaritos/: Lista de Exercícios 2 - Questão 1.py  Lista de Exercícios 2 - Questão 2.py  Lista de Exercícios 2 - Questão 3.py  Lista de Exercícios 2 - Questão 4.py  Lista de Exercícios 2 - Questão 5.py  Lista de Exercícios 2 - Questão 6.py  Lista de Exercícios 2 - Questão 7.py
Lista 3/: Lista 3 - Gabarito.docx  Lista 3 - Gabarito.odt  Lista 3.tex  Lista de Exercícios 3 - Gabarito.docx  Lista de Exercícios 3.docx
Lista 3/Lista 3 - Gabaritos/: Lista 3 - Questão A.py  Lista 3 - Questão B.py  Lista 3 - Questão C.py  Lista 3 - Questão D.py  Lista 3 - Questão E.py  Lista 3 - Questão F.py  Lista 3 - Questão G.py
Lista 3/Lista de Exercícios 3 - Gabaritos/: Lista de Exercícios 3 - Questão 2.py  Lista de Exercícios 3 - Questão 3.py  Lista de Exercícios 3 - Questão 4.py  Lista de Exercícios 3 - Questão 5.py  Lista de Exercícios 3 - Questão 6.py
Lista 4/: Lista 4 - Gabarito.docx  Lista 4.aux  Lista 4.tex  Lista de Exercícios 4 - Gabarito.docx  Lista de Exercícios 4.docx  ~$sta de Exercícios 4 - Gabarito.docx
Lista 4/Lista de Exercícios 4 - Gabaritos/: Lista 4 - Questão A.py  Lista 4 - Questão B.py  Lista 4 - Questão C.py  Lista 4 - Questão D.py  Lista 4 - Questão E.py  Lista 4 - Questão F.py  Lista 4 - Questão G.py  Lista de Exercícios 4 - Questão 1.py  Lista de Exercícios 4 - Questão 3.py  Lista de Exercícios 4 - Questão 4.py
Lista 5/: Lista 5 Gabarito.docx  Lista 5 Gabarito.pages  Lista 5.aux  Lista 5.docx  Lista 5.pages  Lista 5.tex
Lista 5/Lista de Exercícios 5 - Gabaritos/: Lista 5 - Questão 5.py
Lista 6/: Lista 6 Gabarito.docx  Lista 6 Gabarito.pages  Lista 6.docx  Lista 6.pages  Lista 6.tex  Thumbs.db
Lista 7/: Lista 7 Gabarito.docx  Lista 7 Gabarito.pages  Lista 7.docx  Lista 7.pages  Lista 7.tex
Lista 8/: Lista 8 Gabarito.docx  Lista 8 Gabarito.pages  Lista 8.docx  Lista 8.pages
Lista_Revisao/: Lista Revisao.tex
Listas de Revisão/Lista 1/: Lista1.tex  Prova 1.2 - Tipo B.py  Prova 1.7 - Tipo B.py  Prova 1.8 - Tipo B.py
Provas/Provas novas/: aa.txt
Trabalho 1/Trabalho1/: Trabalho1.cbp  Trabalho1.depend  Trabalho1.layout  game.cpp  game.hpp  main.cpp  readme.txt  sprite.cpp  sprite.hpp  state.cpp  state.hpp
Trabalho 2/Trabalho2/: Face.cpp  Game.cpp  Rect.cpp  Sprite.hpp  State.hpp  Trabalho2.cbp  Trabalho2.depend  Trabalho2.layout  Util.hpp  Vec2.cpp
Trabalho 3/Trabalho3/: Game.cpp  Game.hpp  Rect.hpp  Resources.cpp  Resources.hpp  Sprite.cpp  State.cpp  State.hpp  TileMap.hpp  Trabalho3.cbp  Trabalho3.depend  Trabalho3.layout  (+1 more)
Trabalho 7/: Alien.hpp  Defines.hpp  Music.hpp  Rect.hpp  Resources.hpp  Sound.hpp  Text.hpp  Trabalho7.cbp  Trabalho7.depend  Trabalho7.layout
Trabalhos/t1/game/: CMakeLists.txt  Game.cpp  Game.h  Sprite.cpp  Sprite.h  State.cpp  State.h  Util.h  Vec2.cpp  Vec2.h  main.cpp
Trabalhos/t3/: CMakeLists.txt  contributors.txt  readme.md
Trabalhos/t3/game/: CMakeLists.txt  CommandLineParser.cpp  Face.cpp  Face.h  Game.h  GameConfig.h  GameException.h  GameObject.h  Sprite.h  Util.h  game.cpp  main.cpp  resources.cpp  sprite.cpp  state.cpp  state.h  tilemap.cpp  tilemap.h  tileset.cpp  tileset.h
Trabalhos/t3/game_test/: CMakeLists.txt  util_test01.cpp
Trabalhos/t4/game/: CMakeLists.txt  Game.cpp  Game.h  GameConfig.cpp  GameObject.cpp  InputManager.cpp  InputManager.h  Rect.cpp  Resources.cpp  Sprite.cpp  Sprite.h  State.cpp  State.h  StateInput.cpp  TileSet.cpp  TileSet.h  Util.cpp  Vec2.cpp  Vec2.h  defines.h  main.cpp
Trabalhos/t5/game_test/: CMakeLists.txt  TestUtil.h
Trabalhos/t7/: CMakeLists.txt
Trabalhos/t7/game/: Alien.cpp  Bullet.cpp  Camera.cpp  Collision.h  EndState.cpp  EndState.h  GameException.cpp  Penguins.cpp  Resources.cpp  Sprite.h  StageState.cpp  StageState.h  State.cpp  TileSet.cpp  Timer.cpp  TitleState.h  Vec2.cpp  main.cpp
Trabalhos/t7/game_test/: ArgParseTest.cpp
Trabalhos/tudo/game/: Alien.h  Animation.cpp  CMakeLists.txt  EndState.cpp  EndState.h  Game.cpp  Game.h  GameConfig.h  GameObject.cpp  GameObject.h  InputManager.cpp  InputManager.h  Logger.cpp  Logger.h  Minion.cpp  Minion.h  Music.cpp  Music.h  Penguins.h  Rect.cpp  Resources.h  Sound.cpp  Sound.h  Sprite.cpp  StageState.cpp  State.h  StateData.cpp  StateData.h  StateInput.cpp  Text.cpp  Text.h  Timer.h  TitleState.cpp  Vec2.h  defines.h  main.cpp
(+1247 files in other folders)
